chore: gitignored wweb js folders

--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,11 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-# env file
+####
+# misc
 config.env
 package-lock.json
+
+# whatsappweb.js
+.wwebjs_cache
+.wwebjs_auth
